# net-profit

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
net_profit/: hooks.py  install.py  modules.txt  sales_invoice_dashboard.py
net_profit/config/: desktop.py
net_profit/net_profit/doctype/indirct_cost/: indirct_cost.js  indirct_cost.json  indirct_cost.py  test_indirct_cost.py
net_profit/net_profit/doctype/indirect_cost_table/: indirect_cost_table.json  indirect_cost_table.py
net_profit/net_profit/report/net_profit/: net_profit.js  net_profit.json  net_profit.py
net_profit/public/css/: net_profit.css
net_profit/public/js/: net_profit.js  sales_invoice.js
